fix overall outline of main frontend sections preventing unwanted overflows

--- a/frontend/ui/style.css
+++ b/frontend/ui/style.css
@@ -1,5 +1,5 @@
 :root {
-    --main-color: rgb(58, 77, 96);
+    --main-color: rgb(0, 48, 97);
     --main-color-transparent: rgb(58, 77, 96, .7);
     --text-input-box-color: rgb(60, 60, 60);
     --conversations-color: rgb(1, 47, 93);
@@ -11,6 +11,7 @@ body {
     color: white;
     margin: 0;
     border: 0; 
+    font-size: large;
 }
 
 #header {
@@ -90,12 +91,20 @@ body {
     flex-direction: column;
 }
 
+
 input {
     border: 3px solid var(--text-input-box-color);
     margin: 10px;
     background-color: var(--text-input-box-color);
     border-radius: 5px;
     font-size: large;
+    outline-color: red;
+    outline: none;
+    color: white;
+}
+
+input:focus {
+    outline-width: 0;
 }
 
 button {
@@ -106,11 +115,13 @@ button {
 
 
 #server-nav {
-    width: 5%;
+    width: 100px;
     height: 100%;
     color: var(--conversations-color);
     display: flex;
     flex-direction: column;
+    flex-grow: 0;
+    flex-shrink: 0;
 }
 
 body> div, form {
@@ -119,9 +130,11 @@ body> div, form {
 
 #left-pannel {
     float: left;
-    width: 10%;
+    width: 200px;
     position: relative;
     background-color: var(--conversations-color);
+    flex-grow: 0;
+    flex-shrink: 0;
 }
 
 #control-pannel img {
@@ -149,16 +162,20 @@ body> div, form {
     flex-direction: column;
     border: 10px;
     background-color: var(--conversations-color);
+    flex-grow: 0;
+    flex-shrink: 0;
 }
 
 
 /*Main chat section*/
 #convo {
     display: none;
+    flex-shrink: 1;
+    flex-grow: 1;
     justify-content: end;
     flex-direction: column;
     height: 100%;
-    width: 85%;
+    width: auto;
     position: relative;
 }
 
@@ -170,7 +187,7 @@ body> div, form {
 #convo-chat {
     padding-bottom: 5px;
     width: 100%;
-    flex-grow: 1;
+    flex-shrink: 1;
     display: flex;
     row-gap: 5px;
     justify-content: end;
@@ -181,6 +198,7 @@ body> div, form {
     width: 100%;
     display: inline-block;
     word-wrap: break-word;
+    word-break: break-word;
 }
 
 #convo-chat>div:hover{
